--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
 ﻿body {
-  background-image: url(pics/galaxy.jpg);
-  background-size: cover;
+  background-image: url(pics/abstract.png);
+  background-size: auto;
 }
