--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,12 +1,13 @@
 body {
-  /*background-image: url(pics/abstract.png);*/
+  background-image: url(pics/abstract.png);
   background-size: auto;
 }
 
 .menu_bar {
   list-style-type: none;
-  margin: 0;
+  margin: 100px;
   padding: 0;
+  background-color: white;
 }
 
 .menu_bar li {
@@ -18,6 +19,12 @@ body {
 }
 
 p img {
-  width: 200px;
-  height: 300px;
+  width: 160px;
+  height: 200px;
+}
+
+.intro {
+  background-color: white;
+  margin-left: 100px;
+  margin-right: 100px;
 }
