--- a/css/about_me_style.css
+++ b/css/about_me_style.css
@@ -2,7 +2,7 @@ body {
   background-image: url(pics/abstract.png);
   background-size: auto;
 }
-
+/*
 .menu_bar {
   list-style-type: none;
   margin: 100px;
@@ -32,3 +32,4 @@ p img {
 h1 {
   font-family: sans-serif;
 }
+*/
