--- a/css/index_style.css
+++ b/css/index_style.css
@@ -5,28 +5,52 @@ body {
 
 .menu_bar {
   list-style-type: none;
-  margin: 100px;
-  padding: 0;
+  margin-left: 100px;
+  margin-right: 100px;
+  padding: 15px;
   background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  position: sticky;
 }
 
+/*
 .menu_bar li {
   display: inline;
 }
 
+*/
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 5px 10px;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+li a:hover {
+  background-color: gray;
+}
+
 .intro {
   font-style: italic;
-}
-
-p img {
-  width: 160px;
-  height: 200px;
-}
-
-.intro {
   background-color: white;
   margin-left: 100px;
   margin-right: 100px;
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+p img {
+  width: 180px;
+  height: 200px;
+  padding: 20px
 }
 
 h1 {
