--- a/css/index_style.css
+++ b/css/index_style.css
@@ -30,7 +30,8 @@ li a {
   text-align: center;
   padding: 5px 10px;
   text-decoration: none;
-  font-size: 25px;
+  font-size: 20px;
+  font-style: oblique;
 }
 
 li a:hover {
