--- a/css/index_style.css
+++ b/css/index_style.css
@@ -58,3 +58,15 @@ h1 {
   font-family: sans-serif;
   padding-top: 5px;
 }
+
+.footer {
+  font-style: arial;
+  background-color: white;
+  margin-left: 100px;
+  margin-right: 100px;
+  border-radius: 8px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top:5px;
+  padding-bottom: 5px;
+}
