--- a/css/index_style.css
+++ b/css/index_style.css
@@ -3,6 +3,16 @@ body {
   background-size: auto;
 }
 
+.header {
+ /*background-image: url(pics/abstract.png);*/
+}
+
+.header h1 {
+  text-align: center;
+  color: white;
+  font-family: sans-serif;
+}
+
 .menu_bar {
   list-style-type: none;
   margin-left: 100px;
