--- a/css/index_style.css
+++ b/css/index_style.css
@@ -44,7 +44,7 @@ li a {
   font-style: oblique;
 }
 
-li a:hover {
+.top_pad li a:hover {
   background-color: gray;
 }
 
@@ -79,4 +79,29 @@ h1 {
   padding-right: 10px;
   padding-top:5px;
   padding-bottom: 5px;
+  overflow: hidden;
+  bottom: 0;
+  right: 0;
+  position: fixed;
+}
+
+.footer h3 {
+  text-decoration-line: underline;
+}
+
+.footer ul {
+  list-style-type: none;
+}
+
+.footer li {
+  font-size: 15px;
+  padding-left: 0px;
+  padding-right: 10px;
+}
+
+li img {
+  width: 20px;
+  height: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
