--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,6 +1,7 @@
 body {
   background-image: url(pics/abstract.png);
-  background-size: auto;
+  background-size: cover;
+  background-position: center;
 }
 
 .header {
