--- a/css/index_style.css
+++ b/css/index_style.css
@@ -2,6 +2,11 @@ body {
   background-image: url(pics/abstract.png);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+}
+
+body, html {
+  height: 100%;
 }
 
 .header {
