--- a/css/index_style.css
+++ b/css/index_style.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  /*background-size: auto;*/
 }
 
 body, html {
