--- a/css/index_style.css
+++ b/css/index_style.css
@@ -28,7 +28,10 @@ body, html {
   margin-left: 100px;
   margin-right: 100px;
   padding: 15px;
+  /*
   background-color: white;
+  */
+  background-color: #3a3b4a;
   border-radius: 10px;
   overflow: hidden;
   position: sticky;
@@ -46,7 +49,7 @@ li {
 
 li a {
   display: block;
-  color: black;
+  color: white;
   text-align: center;
   padding: 5px 10px;
   text-decoration: none;
@@ -60,23 +63,37 @@ li a {
 }
 */
 li a:hover {
+  background-image: url(pics/abstract.png);
+  background-size: cover;
+  /*
   background-color: lightgray;
+  */
+  /*
+  background-color: black;*/
 }
 
 .intro {
   font-style: italic;
-  background-color: white;
+  background-color: #3a3b4a;
   margin-left: 100px;
   margin-right: 100px;
   border-radius: 8px;
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 20px;
+  color: white;
+}
+
+.links {
+  color: #b8bdff;
 }
 
 p img {
   width: 180px;
   height: 200px;
+  /*
   padding: 20px
+  */
 }
 
 h1 {
@@ -86,7 +103,7 @@ h1 {
 
 .footer {
   font-style: arial;
-  background-color: white;
+  background-color: #3a3b4a;
   margin-left: 100px;
   margin-right: 100px;
   border-radius: 8px;
@@ -102,6 +119,7 @@ h1 {
 
 .footer h3 {
   text-decoration-line: underline;
+  color: white;
 }
 
 .footer ul {
@@ -112,11 +130,13 @@ h1 {
   font-size: 15px;
   padding-left: 0px;
   padding-right: 10px;
+  color: white;
 }
 
 li img {
-  width: 20px;
-  height: 20px;
+  border-radius: 35%;
+  width: 25px;
+  height: 25px;
   padding-left: 10px;
   padding-right: 10px;
 }
