--- a/css/about_me_style.css
+++ b/css/about_me_style.css
@@ -30,12 +30,11 @@ body, html {
   position: sticky;
 }
 
-li {
+.menu_bar li {
   float: left;
 }
 
-
-li a {
+.menu_bar li a {
   display: block;
   color: white;
   text-align: center;
@@ -112,6 +111,7 @@ h1 {
   padding-left: 0px;
   padding-right: 10px;
   color: white;
+  float: left;
 }
 
 li img {
