--- a/css/index_style.css
+++ b/css/index_style.css
@@ -43,11 +43,11 @@ body, html {
 }
 
 */
-li {
+.menu_bar li {
   float: left;
 }
 
-li a {
+.menu_bar li a {
   display: block;
   color: white;
   text-align: center;
@@ -130,6 +130,7 @@ h1 {
   padding-left: 0px;
   padding-right: 10px;
   color: white;
+  float: left;
 }
 
 li img {
