--- a/css/about_me_style.css
+++ b/css/about_me_style.css
@@ -70,10 +70,12 @@ li a:hover {
 }
 
 
-p img {
-  width: 180px;
+.intro p img {
+  width: 197px;
   height: 200px;
+  /*
   padding: 20px
+  */
 }
 
 h1 {
