--- a/css/index_style.css
+++ b/css/index_style.css
@@ -87,8 +87,8 @@ li a:hover {
   color: #b8bdff;
 }
 
-p img {
-  width: 180px;
+.intro p img {
+  width: 197px;
   height: 200px;
   /*
   padding: 20px
