--- a/css/index_style.css
+++ b/css/index_style.css
@@ -1,35 +1,34 @@
 body {
-  background-image: url(pics/abstract.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+    background-image: url(pics/abstract.png);
+    background-size: cover;
+    background-position: center;
 }
 
 body, html {
-  margin: 0;
-  padding: 0;
-  min-height: 100%;
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
 }
 
 .header {
- /*background-image: url(pics/abstract.png);*/
+    /*background-image: url(pics/abstract.png);*/
 }
 
 .header h1 {
-  text-align: center;
-  color: white;
-  font-family: sans-serif;
+    text-align: center;
+    color: white;
+    font-family: sans-serif;
 }
 
 .menu_bar {
-  list-style-type: none;
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 15px;
-  background-color: white;
-  border-radius: 10px;
-  overflow: hidden;
-  position: sticky;
+    list-style-type: none;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 15px;
+    background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    position: sticky;
 }
 
 /*
@@ -39,17 +38,17 @@ body, html {
 
 */
 li {
-  float: left;
+    float: left;
 }
 
 li a {
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 5px 10px;
-  text-decoration: none;
-  font-size: 20px;
-  font-style: oblique;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 5px 10px;
+    text-decoration: none;
+    font-size: 20px;
+    font-style: oblique;
 }
 
 /*
@@ -58,63 +57,60 @@ li a {
 }
 */
 li a:hover {
-  background-color: lightgray;
+    background-color: lightgray;
 }
 
 .intro {
-  font-style: italic;
-  background-color: white;
-  margin-left: 100px;
-  margin-right: 100px;
-  border-radius: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
+    font-style: italic;
+    background-color: white;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 8px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 p img {
-  width: 180px;
-  height: 200px;
-  padding: 20px
+    width: 180px;
+    height: 200px;
+    padding: 20px
 }
 
 h1 {
-  font-family: sans-serif;
-  padding-top: 5px;
+    font-family: sans-serif;
+    padding-top: 5px;
 }
 
 .footer {
-  font-style: arial;
-  background-color: white;
-  margin-left: 100px;
-  margin-right: 100px;
-  border-radius: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top:5px;
-  padding-bottom: 5px;
-  overflow: hidden;
-  bottom: 0;
-  right: 0;
-  position: fixed;
+    font-family: arial, sans-serif;
+    background-color: white;
+    margin-left: 100px;
+    margin-right: 100px;
+    border-radius: 8px;
+    padding: 5px 10px;
+    overflow: hidden;
+    bottom: 0;
+    right: 0;
+    position: fixed;
 }
 
 .footer h3 {
-  text-decoration-line: underline;
+    text-decoration-line: underline;
 }
 
 .footer ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .footer li {
-  font-size: 15px;
-  padding-left: 0px;
-  padding-right: 10px;
+    font-size: 15px;
+    padding-left: 0;
+    padding-right: 10px;
 }
 
 li img {
-  width: 20px;
-  height: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+    width: 20px;
+    height: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
