--- a/css/about_me_style.css
+++ b/css/about_me_style.css
@@ -1,13 +1,14 @@
 body {
-  background-image: url(pics/abstract.png);
-  background-size: cover;
-  background-size: auto;
+    background-image: url(pics/abstract.png);
+    background-size: cover;
+    background-position: center;
 }
 
+
 body, html {
-  margin: 0;
-  padding: 0;
-  height: 90%;
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
 }
 
 .header h1 {
@@ -84,15 +85,12 @@ h1 {
 }
 
 .footer {
-  font-style: arial;
+  font-family: arial, sans-serif;
   background-color: #3a3b4a;
   margin-left: 100px;
   margin-right: 100px;
   border-radius: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top:5px;
-  padding-bottom: 5px;
+  padding: 5px 10px;
   overflow: hidden;
   bottom: 10px;
   right: 0;
