--- a/css/experience_style.css
+++ b/css/experience_style.css
@@ -1,26 +1,20 @@
 body {
-  background-image: url(pics/abstract.png);
-  background-size: cover;
-  /*
-  background-position: center;
-  background-repeat: no-repeat;*/
-  background-size: auto;
+    background-image: url(pics/abstract.png);
+    background-size: cover;
+    background-position: center;
 }
+
 
 body, html {
-  margin: 0;
-  padding: 0;
-  height: 90%;
-}
-
-.header {
- /*background-image: url(pics/abstract.png);*/
+    margin: 0;
+    padding: 0;
+    min-height: 100%;
 }
 
 .header h1 {
-  text-align: center;
-  color: white;
-  font-family: sans-serif;
+    text-align: center;
+    color: white;
+    font-family: sans-serif;
 }
 
 .menu_bar {
@@ -41,8 +35,8 @@ body, html {
 .menu_bar li {
   display: inline;
 }
-
 */
+
 .menu_bar li {
   float: left;
 }
@@ -62,6 +56,7 @@ body, html {
   background-color: gray;
 }
 */
+
 li a:hover {
   /*
   background-image: url(pics/abstract.png);
@@ -69,6 +64,7 @@ li a:hover {
   background-color: lightgray;
   */
   background-color: black;
+  border-radius: 10px;
 }
 
 .intro {
@@ -125,15 +121,12 @@ h1 {
 }
 
 .footer {
-  font-style: arial;
+  font-family: arial, sans-serif;
   background-color: #3a3b4a;
   margin-left: 100px;
   margin-right: 100px;
   border-radius: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top:5px;
-  padding-bottom: 5px;
+  padding: 5px 10px;
   overflow: hidden;
   bottom: 10px;
   right: 0;
